# dotasight

./: .gitignore  Caddyfile  docker-compose.yml
backend/: Dockerfile.backend  config.py  constants.py  decorator.py  llm.py  main.py  opendota.py  pyproject.toml  test_gsi.py
frontend/: Dockerfile.frontend  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AccountIdModal.jsx  ErrorModal.jsx  HeroAutocomplete.jsx  HeroSlot.jsx  RecommendationModal.jsx  RoleSelector.jsx  SectionPanel.jsx
frontend/src/data/: heroes.js  roles.js
frontend/src/hooks/: useAccountId.js  useDraft.js
